# Jingga

./: .env.example  Dockerfile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  package.json  railway.json
apps/api/src/: index.ts  ws.ts
apps/api/src/@types/: y-websocket.d.ts
apps/api/src/lib/: stellar.ts  supabase.ts
apps/api/src/routes/: academic.ts  auth.ts  badges.ts  dashboard.ts  email-auth.ts  karya.ts  license.ts  payments.ts  reader.ts
apps/api/src/services/: badges.ts  claimableBalance.ts  crossref.ts  dashboard.ts  license.ts  minting.ts  openalex.ts  pathPayment.ts  payment.ts  plagiarismCheck.ts  reader.ts  soroban.ts
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/editor/: page.tsx
apps/web/src/app/join/: page.tsx
apps/web/src/contexts/: AuthContext.tsx  ThemeContext.tsx
apps/web/src/hooks/: useBadges.ts  useDashboard.ts  useExchangeRate.ts  useMarketplace.ts  usePendingSignatures.ts  useReader.ts
apps/web/src/lib/: freighter.ts  supabase.ts
apps/web/src/services/: publishService.ts
contracts/: deploy.sh
contracts/.deploy/: license_manager.contract_id  royalty_split.contract_id  royalty_split.wasm
contracts/license_manager/: Cargo.toml
contracts/license_manager/src/: lib.rs
contracts/royalty_split/: Cargo.toml
contracts/royalty_split/src/: lib.rs
supabase/migrations/: 006_licenses_and_resale.sql  007_user_badges.sql  008_karya_users_fk.sql
(+64 files in other folders)
